--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   "dependencies": {
     "axios": "^0.17.0",
     "axios-mock-adapter": "^1.9.0",
-    "faker": "^4.1.0",
-    "sinon": "^4.0.1"
+    "faker": "^4.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
